[package]
name = "pdqsort"
version = "0.1.2"
authors = ["Stjepan Glavina <stjepang@gmail.com>", "Viktor Dahl <pazaconyoman@gmail.com>", "Michael Howell <michael@notriddle.com>"]
description = "Pattern-defeating quicksort"
repository = "https://github.com/stjepang/pdqsort"
documentation = "https://docs.rs/pdqsort"
readme = "README.md"
license = "Apache-2.0/MIT"
keywords = ["sort", "sorting", "no_std", "quicksort", "introsort"]
categories = ["algorithms"]

[badges]
travis-ci = { repository = "stjepang/pdqsort" }

[dev-dependencies]
rand = "0.3"
